--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <script src = 'rps.js'></script>
     </head>
     <body>
-        <h1 style = 'text-align: center;'>CHECK THE CONSOLE</h1>     
+        <div class = 'input'>
+            <h1 id = 'user'>USER: 0</h1>
+            <h1 id = 'computer'>COMPUTER: 0</h1>
+            <button id = 'ROCK'>ROCK</button>
+            <button id = 'PAPER'>PAPER</button>
+            <button id = 'SCISSORS'>SCISSORS</button>
+            <h1 class = 'result'></h1>
+        </div>
     </body>   
 </html>
